# SplitGPU

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.ini  data.fatbin  leveldb  main.cpp  requirements.txt
app/: Split_GPU_Application.cpp  cuwatchdog.py  gpu_node_app.cpp  sp_gpu_d.cpp  sp_rpc.py  sp_watchdog.py
communicate/: ipc.cpp  ipc.h  shmem.c  shmem.h  tcp.h  tcp_server.cpp  tcp_server_client.cpp  tcp_server_client.h
cs/: client.cpp  client.h  controller.cpp  controller.h  cuda_param.h  gpu_node.cu  gpu_node.h  server.h
hook/: cuda_hook.cpp  cudart_hook.cpp
include/: client.h  controller.h  cuda_param.h  cudart_subset.h  gpu_node.h  hook.h  httplib.h  ipc.h  macro_common.h  schedule.h  server.h  sg_log.h  shmem.h  split_gpu.h  tcp.h  tcp_server_client.h  trace_profile.h  user_context.h
manager/: schedule.cpp  schedule.h  user_context.cpp  user_context.h
script/: test_cuda_start.sh
test/: remote_cuda.cu  test_cuda.cu  test_ipc.cpp  test_remote.cpp  test_tcp.cpp
util/: sg_log.h
